<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/planshet"
        android:orderInCategory="1"
        android:title="@string/planshet"
        android:icon="@drawable/baseline_list_alt_24"
        android:iconTint="@color/planshet">
    </item>
    <item
        android:id="@+id/turtle"
        android:orderInCategory="2"
        android:title="@string/turtle"
        android:icon="@drawable/turtle_animal_svgrepo_com"
        >
    </item>
    <item
        android:id="@+id/different_shedules"
        android:orderInCategory="3"
        android:title="@string/different_shedules"
        android:icon="@drawable/baseline_event_note_24"
        android:iconTint="@color/different_shedules">
    </item>
    <item
        android:id="@+id/history"
        android:orderInCategory="4"
        android:title="@string/history"
        android:icon="@drawable/baseline_history_edu_24"
        android:iconTint="@color/history">
    </item>
    <item
        android:id="@+id/settings"
        android:orderInCategory="5"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        android:iconTint="@color/settings">
    </item>
</menu>